Added logic to upscale very small cbz pages.
Fixed dashboard logic to include more than one items with a parent of 0 (items not in a series)