@@ -1,2 +1,4 @@
-Added logic to upscale very small cbz pages.
-Fixed dashboard logic to include more than one items with a parent of 0 (items not in a series)
+Minor adjustments to ajax loop interface timeouts
+Adjustment to number of dashboard items that can show.
+Fix for some memory issues with scaling of images.
+Added pop-out button to open video at 1x resolution (useful for scaling programs. Recommend cropping the top 48px of the image if using firefox.)
